--- a/views/blog.pug
+++ b/views/blog.pug
@@ -1,3 +1,67 @@
 include layout
 
-block content
+doctype html
+html
+    head
+        // Site made with Mobirise Website Builder v4.7.6, https://mobirise.com
+        meta(charset='UTF-8')
+        meta(http-equiv='X-UA-Compatible', content='IE=edge')
+        meta(name='generator', content='Mobirise v4.7.6, mobirise.com')
+        meta(name='viewport', content='width=device-width, initial-scale=1, minimum-scale=1')
+        link(rel='shortcut icon', href='images/logo4.png', type='image/x-icon')
+        meta(name='description', content='')
+        title Home
+        link(rel='stylesheet', href='libs/tether/tether.min.css')
+        link(rel='stylesheet', href='libs/bootstrap/css/bootstrap.min.css')
+        link(rel='stylesheet', href='libs/bootstrap/css/bootstrap-grid.min.css')
+        link(rel='stylesheet', href='libs/bootstrap/css/bootstrap-reboot.min.css')
+        link(rel='stylesheet', href='libs/theme/css/style.css')
+        link(rel='stylesheet', href='libs/mobirise/css/mbr-additional.css', type='text/css')
+    body
+        section#features3-0.features3.cid-qTla8OBnjy
+            .container
+                .media-container-row
+                    .card.p-3.col-12.col-md-6.col-lg-4
+                        .card-wrapper
+                            .card-img
+                                img(src='images/01.jpg', alt='Mobirise')
+                            .card-box
+                                h4.card-title.mbr-fonts-style.display-7
+                                    | Hardcode title xddd
+                                p.mbr-text.mbr-fonts-style.display-7
+                                    | Mobirise is an easy website builder - just drop site elements to your page, add content and style it to look the way you like.
+                            .mbr-section-btn.text-center
+                                a.btn.btn-primary.display-4(href='https://mobirise.com')
+                                    | Learn More
+                    .card.p-3.col-12.col-md-6.col-lg-4
+                        .card-wrapper
+                            .card-img
+                                img(src='images/02.jpg', alt='Mobirise')
+                            .card-box
+                                h4.card-title.mbr-fonts-style.display-7
+                                    | Mobile Friendly
+                                p.mbr-text.mbr-fonts-style.display-7
+                                    | All sites you make with Mobirise are mobile-friendly. You don't have to create a special mobile version of your site.
+                            .mbr-section-btn.text-center
+                                a.btn.btn-primary.display-4(href='https://mobirise.com')
+                                    | Learn More
+                    .card.p-3.col-12.col-md-6.col-lg-4
+                        .card-wrapper
+                            .card-img
+                                img(src='images/03.jpg', alt='Mobirise')
+                            .card-box
+                                h4.card-title.mbr-fonts-style.display-7
+                                    | #{title}
+                                p.mbr-text.mbr-fonts-style.display-7
+                                    | Mobirise offers many site blocks in several themes, and though these blocks are pre-made, they are flexible.
+                            .mbr-section-btn.text-center
+                                a.btn.btn-primary.display-4(href='https://mobirise.com')
+                                    | Learn More
+        section.engine
+            a(href='https://mobirise.me/h') how to create a web page
+        script(src='libs/jquery/jquery.min.js')
+        script(src='libs/popper/popper.min.js')
+        script(src='libs/tether/tether.min.js')
+        script(src='libs/bootstrap/js/bootstrap.min.js')
+        script(src='libs/smoothscroll/smooth-scroll.js')
+        script(src='libs/theme/js/script.js')
