--- a/views/blog.pug
+++ b/views/blog.pug
@@ -21,44 +21,22 @@ html
         section#features3-0.features3.cid-qTla8OBnjy
             .container
                 .media-container-row
-                    .card.p-3.col-12.col-md-6.col-lg-4
-                        .card-wrapper
-                            .card-img
-                                img(src='images/01.jpg', alt='Mobirise')
-                            .card-box
-                                h4.card-title.mbr-fonts-style.display-7
-                                    | Hardcode title xddd
-                                p.mbr-text.mbr-fonts-style.display-7
-                                    | Mobirise is an easy website builder - just drop site elements to your page, add content and style it to look the way you like.
-                            .mbr-section-btn.text-center
-                                a.btn.btn-primary.display-4(href='https://mobirise.com')
-                                    | Learn More
-                    .card.p-3.col-12.col-md-6.col-lg-4
-                        .card-wrapper
-                            .card-img
-                                img(src='images/02.jpg', alt='Mobirise')
-                            .card-box
-                                h4.card-title.mbr-fonts-style.display-7
-                                    | Mobile Friendly
-                                p.mbr-text.mbr-fonts-style.display-7
-                                    | All sites you make with Mobirise are mobile-friendly. You don't have to create a special mobile version of your site.
-                            .mbr-section-btn.text-center
-                                a.btn.btn-primary.display-4(href='https://mobirise.com')
-                                    | Learn More
-                    .card.p-3.col-12.col-md-6.col-lg-4
-                        .card-wrapper
-                            .card-img
-                                img(src='images/03.jpg', alt='Mobirise')
-                            .card-box
-                                h4.card-title.mbr-fonts-style.display-7
-                                    | #{title}
-                                p.mbr-text.mbr-fonts-style.display-7
-                                    | Mobirise offers many site blocks in several themes, and though these blocks are pre-made, they are flexible.
-                            .mbr-section-btn.text-center
-                                a.btn.btn-primary.display-4(href='https://mobirise.com')
-                                    | Learn More
+                    each block in blocks
+                        .card.p-3.col-12.col-md-6.col-lg-4
+                            .card-wrapper
+                                .card-img
+                                    img(src='images/01.jpg', alt='Mobirise')
+                                .card-box
+                                    h4.card-title.mbr-fonts-style.display-7
+                                        | #{block.title}
+                                    p.mbr-text.mbr-fonts-style.display-7
+                                        | #{block.description}
+                                .mbr-section-btn.text-center
+                                    a.btn.btn-primary.display-4(href='https://mobirise.com')
+                                        | Learn More
+
         section.engine
-            a(href='https://mobirise.me/h') how to create a web page
+        a(href='https://mobirise.me/h') how to create a web page
         script(src='libs/jquery/jquery.min.js')
         script(src='libs/popper/popper.min.js')
         script(src='libs/tether/tether.min.js')
