--- a/views/blog.pug
+++ b/views/blog.pug
@@ -18,6 +18,7 @@ html
         link(rel='stylesheet', href='libs/theme/css/style.css')
         link(rel='stylesheet', href='libs/mobirise/css/mbr-additional.css', type='text/css')
     body
+
         section#features3-0.features3.cid-qTla8OBnjy
             .container
                 .media-container-row
@@ -32,11 +33,10 @@ html
                                     p.mbr-text.mbr-fonts-style.display-7
                                         | #{block.description}
                                 .mbr-section-btn.text-center
-                                    a.btn.btn-primary.display-4(href='https://mobirise.com')
+                                    a.btn.btn-primary.display-4(href=block.link)
                                         | Learn More
 
         section.engine
-        a(href='https://mobirise.me/h') how to create a web page
         script(src='libs/jquery/jquery.min.js')
         script(src='libs/popper/popper.min.js')
         script(src='libs/tether/tether.min.js')
