--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,3 +1,4 @@
+
 doctype html
 head
   meta(charset='utf-8')
@@ -12,19 +13,19 @@ head
 // Navigation
 nav.navbar.navbar-expand-lg.navbar-light.bg-light.fixed-top
   .container
-    a.navbar-brand(href='#')
+    a.navbar-brand(href='/')
       img(src='images/logo_peque.png' width='150' height='50' alt='')
     button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarResponsive' aria-controls='navbarResponsive' aria-expanded='false' aria-label='Toggle navigation')
       span.navbar-toggler-icon
     #navbarResponsive.collapse.navbar-collapse
       ul.navbar-nav.ml-auto
         li.nav-item.active
-          a.nav-link(href='#')
+          a.nav-link(href='/')
             | Home
             span.sr-only (current)
         li.nav-item
 
-          a.nav-link(href='blog') Blog
+          a.nav-link(href='/blog') Blog
 
         li.nav-item
           a.nav-link(href='#') Services
