Added Home Page (Not finished)

--- a/views/home.pug
+++ b/views/home.pug
@@ -25,7 +25,7 @@ html
                 div
                     // Filter
                     // Gallery
-                    h1 Blogs
+                    h1 Projects
                     .mbr-gallery-row
                         .mbr-gallery-layout-default
                             div
@@ -101,12 +101,13 @@ html
                                         span.sr-only Next
                                     a.close(href='#', role='button', data-dismiss='modal')
                                         span.sr-only Close
+
         section.engine
-        section#features17-c.features17.cid-qTJCtIqlsp
+        section#features17-c.features17.cid-qTJCtIqlsp(style="margin-top: 10px")
             .container-fluid
-                h1 Projects
+                h1 Blogs
                 .media-container-row
-                    .card.p-3.col-12.col-md-6.col-lg-2
+                    .card.p-3.col-3
                         .card-wrapper
                             .card-img
                                 img(src='images/01.jpg', alt='Mobirise')
@@ -115,7 +116,7 @@ html
                                     | No Coding
                                 p.mbr-text.mbr-fonts-style.display-7
                                     | Mobirise is an easy website builder - just drop site elements to your page, add content and style it to look the way you like.
-                    .card.p-3.col-12.col-md-6.col-lg-2
+                    .card.p-3.col-3
                         .card-wrapper
                             .card-img
                                 img(src='images/01.jpg', alt='Mobirise')
@@ -124,7 +125,7 @@ html
                                     | Mobile Friendly
                                 p.mbr-text.mbr-fonts-style.display-7
                                     | All sites you make with Mobirise are mobile-friendly. You don't have to create a special mobile version of your site.
-                    .card.p-3.col-12.col-md-6.col-lg-2
+                    .card.p-3.col-3
                         .card-wrapper
                             .card-img
                                 img(src='images/01.jpg', alt='Mobirise')
@@ -133,7 +134,7 @@ html
                                     | Unique Styles
                                 p.mbr-text.mbr-fonts-style.display-7
                                     | Mobirise offers many site blocks in several themes, and though these blocks are pre-made, they are flexible.
-                    .card.p-3.col-12.col-md-6.col-lg-2
+                    .card.p-3.col-3
                         .card-wrapper
                             .card-img
                                 img(src='images/01.jpg', alt='Mobirise')
@@ -142,25 +143,8 @@ html
                                     | Unlimited Sites
                                 p.mbr-text.mbr-fonts-style.display-7
                                     | Mobirise gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
-                    .card.p-3.col-12.col-md-6.col-lg-2
-                        .card-wrapper
-                            .card-img
-                                img(src='images/01.jpg', alt='Mobirise')
-                            .card-box
-                                h4.card-title.pb-3.mbr-fonts-style.display-7
-                                    | No Coding
-                                p.mbr-text.mbr-fonts-style.display-7
-                                    | Mobirise is an easy website builder - just drop site elements to your page, add content and style it to look the way you like.
-                    .card.p-3.col-12.col-md-6.col-lg-2
-                        .card-wrapper
-                            .card-img
-                                img(src='images/01.jpg', alt='Mobirise')
-                            .card-box
-                                h4.card-title.pb-3.mbr-fonts-style.display-7
-                                    | Mobile Friendly
-                                p.mbr-text.mbr-fonts-style.display-7
-                                    | All sites you make with Mobirise are mobile-friendly. You don't have to create a special mobile version of your site.
-        section#accordion2-7.accordion2.cid-qTJBSFTpzN
+
+        section#accordion2-7.accordion2.cid-qTJBSFTpzN(style="margin-top: 10px")
             .container
                 .media-container-row.pt-5
                     .accordion-content
