Added Home Page (Not finished)

--- a/views/footer.pug
+++ b/views/footer.pug
@@ -18,66 +18,66 @@ html
            link(rel='stylesheet', href='libs/gallery/style.css')
            link(rel='stylesheet', href='libs/mobirise/css/mbr-additional.css', type='text/css')
 
-section#footer1-5.cid-qTJBo6eyFr.mbr-reveal
-    .mbr-overlay(style='background-color: rgb(60, 60, 60); opacity: 0.5;')
-    .container
-        .media-container-row.content.text-white
-            .col-12.col-md-3
-                .media-wrap
+    section#footer1-5.cid-qTJBo6eyFr.mbr-reveal(style="margin-top: 10px")
+        .mbr-overlay(style='background-color: rgb(60, 60, 60); opacity: 0.5;')
+        .container
+            .media-container-row.content.text-white
+                .col-12.col-md-3
+                    .media-wrap
                         img(src='images/logo4.png', alt='Mobirise')
-            .col-12.col-md-3.mbr-fonts-style.display-7
-                h5.pb-3
-                    | Address
-                p.mbr-text
-                    | 1234 Street Name
-                    br
-                    | City, AA 99999
-            .col-12.col-md-3.mbr-fonts-style.display-7
-                h5.pb-3
-                    | Contacts
-                p.mbr-text
-                    | Email: support@mobirise.com
-                    br
-                    | Phone: +1 (0) 000 0000 001
-                    br
-                    | Fax: +1 (0) 000 0000 002
-            .col-12.col-md-3.mbr-fonts-style.display-7
-                h5.pb-3
-                    | Links
-                p.mbr-text
-                    a.text-primary(href='https://mobirise.com/') Website builder
-                    br
-                    a.text-primary(href='https://mobirise.com/mobirise-free-win.zip') Download for Windows
-                    br
-                    a.text-primary(href='https://mobirise.com/mobirise-free-mac.zip') Download for Mac
-        .footer-lower
-            .media-container-row
-                .col-sm-12
-                    hr
-            .media-container-row.mbr-white
-                .col-sm-6.copyright
-                    p.mbr-text.mbr-fonts-style.display-7
-                        | © Copyright 2017 Mobirise - All Rights Reserved
-                .col-md-6
-                    .social-list.align-right
-                        .soc-item
-                            a(href='https://twitter.com/mobirise', target='_blank')
-                                span.socicon-twitter.socicon.mbr-iconfont.mbr-iconfont-social
-                        .soc-item
-                            a(href='https://www.facebook.com/pages/Mobirise/1616226671953247', target='_blank')
-                                span.socicon-facebook.socicon.mbr-iconfont.mbr-iconfont-social
-                        .soc-item
-                            a(href='https://www.youtube.com/c/mobirise', target='_blank')
-                                span.socicon-youtube.socicon.mbr-iconfont.mbr-iconfont-social
-                        .soc-item
-                            a(href='https://instagram.com/mobirise', target='_blank')
-                                span.socicon-instagram.socicon.mbr-iconfont.mbr-iconfont-social
-                        .soc-item
-                            a(href='https://plus.google.com/u/0/+Mobirise', target='_blank')
-                                span.socicon-googleplus.socicon.mbr-iconfont.mbr-iconfont-social
-                        .soc-item
-                            a(href='https://www.behance.net/Mobirise', target='_blank')
-                                span.socicon-behance.socicon.mbr-iconfont.mbr-iconfont-social
+                .col-12.col-md-3.mbr-fonts-style.display-7
+                    h5.pb-3
+                        | Address
+                    p.mbr-text
+                        | 1234 Street Name
+                        br
+                        | City, AA 99999
+                .col-12.col-md-3.mbr-fonts-style.display-7
+                    h5.pb-3
+                        | Contacts
+                    p.mbr-text
+                        | Email: support@mobirise.com
+                        br
+                        | Phone: +1 (0) 000 0000 001
+                        br
+                        | Fax: +1 (0) 000 0000 002
+                .col-12.col-md-3.mbr-fonts-style.display-7
+                    h5.pb-3
+                        | Links
+                    p.mbr-text
+                        a.text-primary(href='https://mobirise.com/') Website builder
+                        br
+                        a.text-primary(href='https://mobirise.com/mobirise-free-win.zip') Download for Windows
+                        br
+                        a.text-primary(href='https://mobirise.com/mobirise-free-mac.zip') Download for Mac
+            .footer-lower
+                .media-container-row
+                    .col-sm-12
+                        hr
+                .media-container-row.mbr-white
+                    .col-sm-6.copyright
+                        p.mbr-text.mbr-fonts-style.display-7
+                            | © Copyright 2017 Mobirise - All Rights Reserved
+                    .col-md-6
+                        .social-list.align-right
+                            .soc-item
+                                a(href='https://twitter.com/mobirise', target='_blank')
+                                    span.socicon-twitter.socicon.mbr-iconfont.mbr-iconfont-social
+                            .soc-item
+                                a(href='https://www.facebook.com/pages/Mobirise/1616226671953247', target='_blank')
+                                    span.socicon-facebook.socicon.mbr-iconfont.mbr-iconfont-social
+                            .soc-item
+                                a(href='https://www.youtube.com/c/mobirise', target='_blank')
+                                    span.socicon-youtube.socicon.mbr-iconfont.mbr-iconfont-social
+                            .soc-item
+                                a(href='https://instagram.com/mobirise', target='_blank')
+                                    span.socicon-instagram.socicon.mbr-iconfont.mbr-iconfont-social
+                            .soc-item
+                                a(href='https://plus.google.com/u/0/+Mobirise', target='_blank')
+                                    span.socicon-googleplus.socicon.mbr-iconfont.mbr-iconfont-social
+                            .soc-item
+                                a(href='https://www.behance.net/Mobirise', target='_blank')
+                                    span.socicon-behance.socicon.mbr-iconfont.mbr-iconfont-social
 
         script(src='libs/web/assets/jquery/jquery.min.js')
         script(src='libs/popper/popper.min.js')
