--- a/views/footer.pug
+++ b/views/footer.pug
@@ -18,10 +18,11 @@ html
            link(rel='stylesheet', href='libs/gallery/style.css')
            link(rel='stylesheet', href='libs/mobirise/css/mbr-additional.css', type='text/css')
 
-    section#footer1-5.cid-qTJBo6eyFr.mbr-reveal(style="margin-top: 10px")
+           link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
+    section#footer1-5.cid-qTJBo6eyFr.mbr-reveal
         .mbr-overlay(style='background-color: rgb(60, 60, 60); opacity: 0.5;')
         .container
-            .media-container-row.content.text-white
+            .media-container-row.content.text-white(style='margin-top: 20px')
                 .col-12.col-md-3
                     .media-wrap
                         img(src='images/logo4.png', alt='Mobirise')
@@ -60,25 +61,11 @@ html
                             | © Copyright 2017 Mobirise - All Rights Reserved
                     .col-md-6
                         .social-list.align-right
-                            .soc-item
-                                a(href='https://twitter.com/mobirise', target='_blank')
-                                    span.socicon-twitter.socicon.mbr-iconfont.mbr-iconfont-social
-                            .soc-item
-                                a(href='https://www.facebook.com/pages/Mobirise/1616226671953247', target='_blank')
-                                    span.socicon-facebook.socicon.mbr-iconfont.mbr-iconfont-social
-                            .soc-item
-                                a(href='https://www.youtube.com/c/mobirise', target='_blank')
-                                    span.socicon-youtube.socicon.mbr-iconfont.mbr-iconfont-social
-                            .soc-item
-                                a(href='https://instagram.com/mobirise', target='_blank')
-                                    span.socicon-instagram.socicon.mbr-iconfont.mbr-iconfont-social
-                            .soc-item
-                                a(href='https://plus.google.com/u/0/+Mobirise', target='_blank')
-                                    span.socicon-googleplus.socicon.mbr-iconfont.mbr-iconfont-social
-                            .soc-item
-                                a(href='https://www.behance.net/Mobirise', target='_blank')
-                                    span.socicon-behance.socicon.mbr-iconfont.mbr-iconfont-social
-
+                            a.socicon-twitter.socicon.mbr-iconfont.mbr-iconfont-social(href='#', target='_blank', style="margin-right: 10px")
+                            a.socicon-facebook.socicon.mbr-iconfont.mbr-iconfont-social(href='#', target='_blank', style="margin-right: 10px")
+                            a.socicon-youtube.socicon.mbr-iconfont.mbr-iconfont-social(href='#', target='_blank', style="margin-right: 10px")
+                            a.socicon-instagram.socicon.mbr-iconfont.mbr-iconfont-social(href='#', target='_blank', style="margin-right: 10px")
+                            a.socicon-googleplus.socicon.mbr-iconfont.mbr-iconfont-social(href='#', target='_blank', style="margin-right: 10px")
         script(src='libs/web/assets/jquery/jquery.min.js')
         script(src='libs/popper/popper.min.js')
         script(src='libs/tether/tether.min.js')
