--- a/views/blog.pug
+++ b/views/blog.pug
@@ -3,7 +3,6 @@ include layout
 doctype html
 html
     head
-        // Site made with Mobirise Website Builder v4.7.6, https://mobirise.com
         meta(charset='UTF-8')
         meta(http-equiv='X-UA-Compatible', content='IE=edge')
         meta(name='generator', content='Mobirise v4.7.6, mobirise.com')
@@ -16,11 +15,11 @@ html
         link(rel='stylesheet', href='libs/bootstrap/css/bootstrap-grid.min.css')
         link(rel='stylesheet', href='libs/bootstrap/css/bootstrap-reboot.min.css')
         link(rel='stylesheet', href='libs/theme/css/style.css')
-        link(rel='stylesheet', href='libs/mobirise/css/mbr-additional.css', type='text/css')
     body
 
-        section#features3-0.features3.cid-qTla8OBnjy
+        section#features3-0.features3.cid-qTla8OBnjy(style='margin-top: 20px')
             .container
+                h1 Blogs!
                 .media-container-row
                     each block in blocks
                         .card.p-3.col-12.col-md-6.col-lg-4
@@ -41,5 +40,4 @@ html
         script(src='libs/popper/popper.min.js')
         script(src='libs/tether/tether.min.js')
         script(src='libs/bootstrap/js/bootstrap.min.js')
-        script(src='libs/smoothscroll/smooth-scroll.js')
         script(src='libs/theme/js/script.js')
